// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image-cloze-association renders snapshot 1`] = `
<WithStyles(UiLayout)>
  <WithStyles(PreviewPrompt)
    className="prompt"
  />
  <WithStyles(PreviewPrompt) />
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <WithStyles(InteractiveSection)
    uiStyle={Object {}}
  >
    <WithStyles(ImageContainer)
      answers={Array []}
      canDrag={true}
      draggingElement={
        Object {
          "id": "",
          "value": "",
        }
      }
      maxResponsePerZone={1}
      onAnswerSelect={[Function]}
      onDragAnswerBegin={[Function]}
      onDragAnswerEnd={[Function]}
      responseContainers={Array []}
    />
    <WithStyles(PossibleResponses)
      canDrag={true}
      customStyle={
        Object {
          "minWidth": "fit-content",
        }
      }
      data={Array []}
      isVertical={false}
      onAnswerRemove={[Function]}
      onDragBegin={[Function]}
      onDragEnd={[Function]}
    />
  </WithStyles(InteractiveSection)>
</WithStyles(UiLayout)>
`;

exports[`image-cloze-association renders snapshot with rationale 1`] = `
<WithStyles(UiLayout)>
  <WithStyles(PreviewPrompt)
    className="prompt"
  />
  <WithStyles(PreviewPrompt) />
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <WithStyles(InteractiveSection)
    uiStyle={Object {}}
  >
    <WithStyles(ImageContainer)
      answers={Array []}
      canDrag={true}
      draggingElement={
        Object {
          "id": "",
          "value": "",
        }
      }
      maxResponsePerZone={1}
      onAnswerSelect={[Function]}
      onDragAnswerBegin={[Function]}
      onDragAnswerEnd={[Function]}
      responseContainers={Array []}
    />
    <WithStyles(PossibleResponses)
      canDrag={true}
      customStyle={
        Object {
          "minWidth": "fit-content",
        }
      }
      data={Array []}
      isVertical={false}
      onAnswerRemove={[Function]}
      onDragBegin={[Function]}
      onDragEnd={[Function]}
    />
  </WithStyles(InteractiveSection)>
  <WithStyles(Collapsible)
    labels={
      Object {
        "hidden": "Show Rationale",
        "visible": "Hide Rationale",
      }
    }
  >
    <WithStyles(PreviewPrompt)
      prompt="This is rationale"
    />
  </WithStyles(Collapsible)>
</WithStyles(UiLayout)>
`;

exports[`image-cloze-association renders snapshot with teacherInstructions 1`] = `
<WithStyles(UiLayout)>
  <WithStyles(Collapsible)
    labels={
      Object {
        "hidden": "Show Teacher Instructions",
        "visible": "Hide Teacher Instructions",
      }
    }
  >
    <WithStyles(PreviewPrompt)
      prompt="These are teacher instructions"
    />
  </WithStyles(Collapsible)>
  <WithStyles(PreviewPrompt)
    className="prompt"
  />
  <WithStyles(PreviewPrompt) />
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    show={false}
    toggled={false}
  />
  <WithStyles(InteractiveSection)
    uiStyle={Object {}}
  >
    <WithStyles(ImageContainer)
      answers={Array []}
      canDrag={true}
      draggingElement={
        Object {
          "id": "",
          "value": "",
        }
      }
      maxResponsePerZone={1}
      onAnswerSelect={[Function]}
      onDragAnswerBegin={[Function]}
      onDragAnswerEnd={[Function]}
      responseContainers={Array []}
    />
    <WithStyles(PossibleResponses)
      canDrag={true}
      customStyle={
        Object {
          "minWidth": "fit-content",
        }
      }
      data={Array []}
      isVertical={false}
      onAnswerRemove={[Function]}
      onDragBegin={[Function]}
      onDragEnd={[Function]}
    />
  </WithStyles(InteractiveSection)>
</WithStyles(UiLayout)>
`;
